Fixed crash on closing secondary animated document during playback.

I think this crash had to do with the lifetime of the
frame cache being longer than that of the canvas animation state.
Manually clearly the canvas animation state fixes it.

BUG:499658